--- a/proyecto_moviles_fernandoramirez2025/pubspec.yaml
+++ b/proyecto_moviles_fernandoramirez2025/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   cloud_firestore: ^6.1.0
   firebase_core: ^4.2.1
   firebase_auth: ^6.1.2
+  intl: ^0.20.2
+  google_sign_in: ^7.2.0
 
 dev_dependencies:
   flutter_test:
