--- a/proyecto_moviles_fernandoramirez2025/android/app/src/main/AndroidManifest.xml
+++ b/proyecto_moviles_fernandoramirez2025/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="proyecto_moviles_fernandoramirez2025"
+        android:label="ProyectoFyzz"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
             android:exported="true"
